objects/CB_LMA_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Dealer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Site_Type__c</field>
                <operation>notEqual</operation>
                <value>a0I40000007012Y</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LMA Relationship (Dealer Account)</relationshipLabel>
        <relationshipName>LMA_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Site_Type__r.Name</field>
                <operation>equals</operation>
                <value>Local Marketing</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LMA Related Accounts</relationshipLabel>
        <relationshipName>LMA_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Combined_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>LMA Combined Unique</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LMA_Combined__c</fullName>
        <formula>Dealer_Account__r.Id + LMA_Account__r.Id</formula>
        <label>LMA Combined</label>
        <type>Text</type>
    </fields>
    <label>LMA Relationships</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LMAR-{0000}</displayFormat>
        <label>LMA Relationships Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMA Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CB_Account_fields_cannot_both_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>(Dealer_Account__c = &quot;&quot;) &amp;&amp; 
(LMA_Account__c = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Please fill in either the Dealer Account field or the LMA Account field</errorMessage>
    </validationRules>
</CustomObject>